--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-messenger-customer-chat": "^0.8.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
