--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-messenger-customer-chat": "^0.8.0",
+    "react-sweetalert2": "^0.6.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
