--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
     "react-dom": "^18.2.0",
     "react-messenger-customer-chat": "^0.8.0",
     "react-sweetalert2": "^0.6.0",
+    "react-typed": "^1.2.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
